# tabular-data

./: .gitignore  LICENSE  README.md  format.sh  lint.sh  pyproject.toml  test.sh
fixtures/: files.py  people.csv  people.csv.ignore
tabular_data/: __init__.py  csv_file.py
tests/tabular_data/: test_file.py
