[tool.poetry]
name = "tabular-data"
version = "0.1.3"
description = "The sensible way to work with tabular data"
authors = ["Juan Gonzalez <jrg2156@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tabular_data"}]
repository = "https://github.com/juanrgon/tabular-data"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
